<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usth_weather">USTH Weather</string>
    <string name="mon">Mon</string>
    <string name="Mon">Mon</string>
    <string name="partly_cloudy">partly_cloudy</string>
    <string name="Showers" />
    <string name="Rain" />
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="mostly_cloudy">mostly_cloudy</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
</resources>