<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForecastFragment"
    android:background="#f5f5f5"
    android:id="@+id/forecast">
<!--    &lt;!&ndash; Header layout &ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:background="#107de3">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="30sp"-->
<!--            android:layout_margin="20sp"-->
<!--            android:textStyle="bold"-->
<!--            android:text="USTH Weather"-->
<!--            android:textColor="#f5f5f5"-->
<!--            tools:ignore="HardcodedText">-->
<!--        </TextView>-->
<!--    </LinearLayout>-->

    <!-- Big layout below header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#ebe1d5"
        android:orientation="vertical"
        android:layout_weight="2">

        <!-- Layout for Mon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Mon"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/partly_cloudy">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Partly Cloudy\n24C - 31C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Tue"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/Showers"
                android:src="@drawable/rainy">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Showers\n24C - 30C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Wed"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/rainy">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Rain\n22C - 23C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Thu"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/scattered_shower">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Scattered Showers\n22C - 27C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Fri"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/mostly_cloudy"
                android:src="@drawable/cloudyy">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Mostly Cloudy\n22C - 30C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Sat"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/partly_cloudy">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Partly Cloudy\n24C - 31C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Sun"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/thunderstorm">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Thunderstorms\n25C - 28C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Mon"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/storm">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Scattered Thunderstorms\n24C - 27C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Tue"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/showers">
            </ImageView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Showers\n24C - 26C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="20sp"
                android:text="@string/Wed"
                android:textSize="20sp">
            </TextView>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/storm">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:text="Scattered Thunderstorms\n23C - 27C"
                android:textSize="16sp">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
